--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/server.ts",
-    "build": "tsc"
+    "build": "esbuild src/server.ts --bundle --platform=node --outfile=dist/server.js --minify"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
+    "esbuild": "^0.25.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
